log/build_2023-02-13_22-03-59/dofsensor/stderr.log
  File "C:\dev\robotic_hw\install\Lib\site-packages\dofsensor\server.py", line 12
    def __init__(self,args**):
                          ^
SyntaxError: invalid syntax

